...

            <!--Animation from https://assets4.lottiefiles.com/datafiles/2lGojPBL042X0yk/data.json-->
            <!--Code for animation (lottie) https://airbnb.io/lottie/#/android-->


            <EditText
                android:id="@+id/passwordEntry"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/textView"
                android:layout_marginTop="40dp"
                android:imeOptions="actionDone"
                android:paddingRight="10dp"
...
                android:id="@+id/unlockButton"
                android:layout_width="170dp"
                android:layout_height="70dp"
                android:layout_below="@+id/passwordEntry"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:text="unlock"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
