...
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/back_button"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/gpaCalcLinearLayout"
            android:layout_marginRight="10dp"
            android:layout_height="100dp">

            <ImageButton
                android:layout_width="80dp"
                android:layout_height="100dp"
...
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:background="@drawable/back_button"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/settingsLinearLayout"
            android:layout_height="100dp">

            <ImageButton
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:background="@drawable/ic_settings_black_24dp"
...
